{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 144,
  "lineage": "d73a26e7-84ab-00ec-a280-b98a6e471ae0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:internet-gateway/igw-bab2cbd3",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-ce1228a7"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-ce1228a7"
                ]
              }
            ],
            "id": "igw-bab2cbd3",
            "internet_gateway_id": "igw-bab2cbd3",
            "owner_id": "904941370038"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:vpc/vpc-ce1228a7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7cc32f14",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-723a391b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-ce1228a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3db0bb54",
            "owner_id": "904941370038",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:vpc/vpc-ce1228a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-3ea1ad57",
            "default_route_table_id": "rtb-3db0bb54",
            "default_security_group_id": "sg-6226df0f",
            "dhcp_options_id": "dopt-723a391b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-ce1228a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3db0bb54",
            "owner_id": "904941370038"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:904941370038:loadbalancer/udagram-app-api-lb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b",
              "eu-west-3c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "udagram-app-api-lb-1625552630.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "udagram-app-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-02c4d1ee4eea242f7",
              "i-05646d9b8720384ea",
              "i-0b40c9592a023e727"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "udagram-app-api-lb",
            "security_groups": [
              "sg-03c2c3018ccbdd9fd",
              "sg-0ce2920fd9db35cf2"
            ],
            "source_security_group": "904941370038/udagram-app-api-lb",
            "source_security_group_id": "sg-0ce2920fd9db35cf2",
            "subnets": [
              "subnet-00aca057588283693",
              "subnet-06c55e5c6021bbbd2",
              "subnet-0c6a8d356dd93bb02"
            ],
            "tags": {
              "Cluster": "udagram-app",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6fb16625871821",
            "arn": "arn:aws:ec2:eu-west-3:904941370038:instance/i-03a1ddfc09ad32740",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a1ddfc09ad32740",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c6846320a5c8556",
            "private_dns": "ip-172-31-240-154.eu-west-3.compute.internal",
            "private_ip": "172.31.240.154",
            "public_dns": "ec2-15-237-36-211.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.36.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0479c392213408813",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c55e5c6021bbbd2",
            "tags": {
              "Cluster": "udagram-app",
              "Name": "udagram-app-bastion",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c2c3018ccbdd9fd",
              "sg-0aafcef26fe98d0de"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6fb16625871821",
            "arn": "arn:aws:ec2:eu-west-3:904941370038:instance/i-05646d9b8720384ea",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-05646d9b8720384ea",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033e8cecf176804ac",
            "private_dns": "ip-172-31-240-241.eu-west-3.compute.internal",
            "private_ip": "172.31.240.241",
            "public_dns": "ec2-15-236-41-239.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.41.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0fd03e8b8af3ac778",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c55e5c6021bbbd2",
            "tags": {
              "Name": "udagram-app-cp-1",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c2c3018ccbdd9fd"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6fb16625871821",
            "arn": "arn:aws:ec2:eu-west-3:904941370038:instance/i-0b40c9592a023e727",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-0b40c9592a023e727",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bb2125faf3f08d8",
            "private_dns": "ip-172-31-241-101.eu-west-3.compute.internal",
            "private_ip": "172.31.241.101",
            "public_dns": "ec2-35-180-4-68.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.4.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0833bc59a24bdb2a2",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aca057588283693",
            "tags": {
              "Name": "udagram-app-cp-2",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c2c3018ccbdd9fd"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6fb16625871821",
            "arn": "arn:aws:ec2:eu-west-3:904941370038:instance/i-02c4d1ee4eea242f7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-02c4d1ee4eea242f7",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06dbdb55f161b5499",
            "private_dns": "ip-172-31-242-62.eu-west-3.compute.internal",
            "private_ip": "172.31.242.62",
            "public_dns": "ec2-35-180-186-255.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.186.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ddb0730c825bea6f",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a8d356dd93bb02",
            "tags": {
              "Name": "udagram-app-cp-3",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c2c3018ccbdd9fd"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:security-group/sg-03c2c3018ccbdd9fd",
            "description": "cluster common rules",
            "egress": [],
            "id": "sg-03c2c3018ccbdd9fd",
            "ingress": [],
            "name": "udagram-app-common",
            "name_prefix": "",
            "owner_id": "904941370038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram-app",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-ce1228a7"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:security-group/sg-0ce2920fd9db35cf2",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce2920fd9db35cf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-app-api-lb",
            "name_prefix": "",
            "owner_id": "904941370038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-ce1228a7"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:security-group/sg-0aafcef26fe98d0de",
            "description": "ssh access",
            "egress": [],
            "id": "sg-0aafcef26fe98d0de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udagram-app-ssh",
            "name_prefix": "",
            "owner_id": "904941370038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-ce1228a7"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-2922035308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c2c3018ccbdd9fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-3361379881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c2c3018ccbdd9fd",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:subnet/subnet-06c55e5c6021bbbd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.240.0/24",
            "id": "subnet-06c55e5c6021bbbd2",
            "map_public_ip_on_launch": true,
            "owner_id": "904941370038",
            "tags": {
              "Cluster": "udagram-app",
              "Name": "udagram-app-eu-west-3a",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "vpc_id": "vpc-ce1228a7"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:subnet/subnet-00aca057588283693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.31.241.0/24",
            "id": "subnet-00aca057588283693",
            "map_public_ip_on_launch": true,
            "owner_id": "904941370038",
            "tags": {
              "Cluster": "udagram-app",
              "Name": "udagram-app-eu-west-3b",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "vpc_id": "vpc-ce1228a7"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:904941370038:subnet/subnet-0c6a8d356dd93bb02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.31.242.0/24",
            "id": "subnet-0c6a8d356dd93bb02",
            "map_public_ip_on_launch": true,
            "owner_id": "904941370038",
            "tags": {
              "Cluster": "udagram-app",
              "Name": "udagram-app-eu-west-3c",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "vpc_id": "vpc-ce1228a7"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}